# nifly

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  xmake.lua
include/: Animation.hpp  (+20 more)
src/: Animation.cpp  BasicTypes.cpp  BgmFile.cpp  CMakeLists.txt  ExtraData.cpp  Factory.cpp  Geometry.cpp  Materials.cpp  NifFile.cpp  NifUtil.cpp  Nodes.cpp  Object3d.cpp  Objects.cpp  Particles.cpp  Shaders.cpp  Skin.cpp  bhk.cpp
tests/: CMakeLists.txt  TestCase.cpp  TestNifFile.cpp  TestNifFile.hpp  TestNifFileOptional.cpp  TestNifFile_Animated_LE.nif  TestNifFile_Animated_LE_expected.nif  TestNifFile_DeepGraph_SE.nif  TestNifFile_DeepGraph_SE_expected.nif  TestNifFile_FO76.nif  TestNifFile_FO76_expected.nif  TestNifFile_FixBSXFlags_AddExtEmit.nif  TestNifFile_FixBSXFlags_AddExtEmit_expected.nif  TestNifFile_FixBSXFlags_RemoveExtEmit.nif  TestNifFile_FixShaderFlags_AddEnvMap.nif  TestNifFile_FixShaderFlags_AddEnvMap_expected.nif  TestNifFile_FixShaderFlags_RemoveEnvMap.nif  TestNifFile_Furniture_Col_SE.nif  TestNifFile_Furniture_Col_SE_expected.nif  TestNifFile_LoadSave.nif  TestNifFile_LooseBlocks_SE.nif  TestNifFile_MultiBound_SE.nif  TestNifFile_MultiBound_SE_expected.nif  TestNifFile_Optimize_Dynamic_LE_to_SE.nif  TestNifFile_Optimize_Dynamic_LE_to_SE_expected.nif  TestNifFile_Optimize_LE_to_SE.nif  TestNifFile_Optimize_LE_to_SE_expected.nif  TestNifFile_Optimize_SE_to_LE.nif  TestNifFile_Optimize_SE_to_LE_expected.nif  TestNifFile_OrderedNode_SE.nif  TestNifFile_OrderedNode_SE_expected.nif  TestNifFile_RootNonZero_expected.nif  TestNifFile_Skinned_FO4.nif  TestNifFile_Skinned_NoNiSkinDataWeights.nif  TestNifFile_Skinned_OB.nif  TestNifFile_Skinned_SE_expected.nif  TestNifFile_Static.nif  TestNifFile_Static_FO4_139.nif  TestUtil.cpp  TestUtil.hpp
tests/data/: TestNifFile_Optimize.nif
tests/data/approval_tests/: TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_facegendata_facegeom_dragonborn.esm_00018fca.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_character_assets_1stpersonbody_0.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_character_assets_1stpersonhands_0.nif.load.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_character_assets_1stpersonhands_1.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_character_assets_childbrows.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_character_assets_childfeet.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_character_assets_childhands.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_character_assets_childhead.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_character_assets_childmaskleftside.nif.load.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_character_assets_childmaskrightside.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_character_assets_mouthchild.nif.load.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_character_assets_skeleton_female_kids.nif.load.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_character_assets_skeletonkids.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_hair_cf02.nif.load.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_hair_cf02.nif.optimize1.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_hair_cf03.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_hair_cf03_hl.nif.load.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_hair_cf05.nif.load.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_hair_cf05_hl.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_hair_cm01.nif.load.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_hair_cm01_hl.nif.load.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_hair_cm02.nif.load.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_headparts_character_ranaline_hair_cm02_hl.nif.load.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_standard_74_w_scimitars_saber_iron.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_standard_74_w_scimitars_saber_steel.nif.load.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_standard_74_w_scimitars_scimitar_ebony.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_standard_74_w_scimitars_scimitar_glass.nif.optimize2.approved.txt  TestNifFile.Optimize_lots_of_meshes.approval_standard_74_w_scimitars_scimitar_glass_old.nif.load.approved.txt  (+41 more)
tests/expected/: TestNifFile_Animated_LE.nif  TestNifFile_DeepGraph_SE.nif  TestNifFile_FO76.nif  TestNifFile_FixBSXFlags_RemoveExtEmit.nif  TestNifFile_LooseBlocks_SE.nif  TestNifFile_MultiBound_SE.nif  TestNifFile_Optimize_Dynamic_LE_to_SE.nif  TestNifFile_Optimize_Dynamic_SE_to_LE.nif  TestNifFile_SF.nif  TestNifFile_Skinned_Dynamic_SE.nif  TestNifFile_Skinned_NoNiSkinDataWeights.nif  TestNifFile_Skinned_OB.nif  TestNifFile_Skinned_SE.nif  TestNifFile_Static_FO4_132.nif  TestNifFile_Static_FO4_139.nif  TestNifFile_Static_SE.nif  TestNifFile_ToInternalMesh_SF.nif
tests/input/: TestNifFile_Corrupted.nif  TestNifFile_Optimize_Dynamic_SE_to_LE.nif  TestNifFile_RootNonZero.nif  TestNifFile_SF.nif  TestNifFile_Static_FO4.nif  TestNifFile_Static_FO4_132.nif  TestNifFile_ToInternalMesh_SF.nif
tests/src/: TestNifFile.cpp  Utils.hpp
(+65 files in other folders)
